<resources>
    <string name="app_name">The Great App!</string>
    <string name="like">Like</string>
    <string name="set_wallpaper">Set wallpaper</string>
    <string name="unsplash_image">Unsplash image</string>
    <string name="results_could_not_be_loaded">Results could not be loaded</string>
    <string name="retry">Retry</string>
    <string name="no_results">No results found for this query</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="applogo">AppLogo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="profile">Profile</string>
    <string name="name">Name</string>
    <string name="save">Save</string>
    <string name="reset_pw">Reset Password</string>
    <string name="exit">Exit</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="add">Add</string>
    <string name="enter_caption_here">Enter caption here..</string>
    <string name="Post">Post</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="register">Register</string>
    <string name="enter_valid_email">Please enter valid Email</string>
    <string name="enter_valid_pass">Password shout be at least 8 characters long</string>
    <string name="enter_login">Please enter Login</string>
    <string name="email_user_exists">User with this email already exists!</string>
    <string name="signup_sucsess">SignUp successful</string>
</resources>