<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_logo"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@raw/logo" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="15dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/name"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/input_prof_nickname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/password"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:text="Michael" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="@color/blue"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/input_prof_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/password"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/purple"
                android:textSize="24sp"
                tools:text="123@gmail.com" />

            <Button
                android:id="@+id/bt_save"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-thin"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_reset_pw"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-thin"
                android:text="@string/reset_pw"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Button
                android:id="@+id/bt_exit"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-thin"
                android:text="@string/exit"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>