<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.gallery.GalleryFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_unsplash_image" />

    <com.vlad1m1r.lemniscate.funny.HeartProgressView
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:duration="1500"
        app:hasHole="true"
        app:lineColor="#DC143C"
        app:maxLineLength="0.9"
        app:minLineLength="0.3"
        app:sizeMultiplier="1"
        app:strokeWidth="3dp" />

    <TextView
        android:id="@+id/text_view_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_retry"
        android:layout_centerHorizontal="true"
        android:text="@string/results_could_not_be_loaded"
        android:visibility="gone"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/button_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@null"
        android:padding="8dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_refresh"
        android:visibility="gone"
        tools:visibility="visible"
        android:contentDescription="@string/retry" />

    <TextView
        android:id="@+id/text_view_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#00FFFFFF"
        android:text="@string/no_results"
        android:visibility="gone"
        tools:visibility="visible" />

</RelativeLayout>