<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/NoActionBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F1E5E6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_logo"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/applogo"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:src="@raw/logo" />

            <TextView
                android:id="@+id/tv_reg_email"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/email"
                android:textAllCaps="false"
                android:textColor="#67BBE8"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/input_reg_email"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="#441697"
                android:textSize="24sp"
                tools:text="123@gmail.com" />

            <TextView
                android:id="@+id/tv_reg_login"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="#67BBE8"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/input_reg_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/login"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="#441697"
                android:textSize="24sp"
                tools:text="Michael" />

            <TextView
                android:id="@+id/tv_reg_pass"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/password"
                android:textAllCaps="false"
                android:textColor="#67BBE8"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/input_reg_pass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg"
                android:fontFamily="sans-serif-thin"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="#441697"
                android:textSize="24sp"
                tools:text="password" />

            <Button
                android:id="@+id/bt_register"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_bg"
                android:fontFamily="sans-serif-thin"
                android:text="@string/sign_up"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_account_exists"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="-5dp"
                android:fontFamily="sans-serif-thin"
                android:text="@string/already_have_an_account"
                android:textAlignment="center"
                android:textColor="#441697"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-thin"
                android:paddingVertical="5dp"
                android:text="@string/log_in"
                android:textAlignment="center"
                android:textColor="#441697"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <com.vlad1m1r.lemniscate.funny.HeartProgressView
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        app:duration="1500"
        app:hasHole="true"
        app:lineColor="#DC143C"
        app:maxLineLength="0.9"
        app:minLineLength="0.3"
        app:sizeMultiplier="1"
        app:strokeWidth="3dp" />

</FrameLayout>