<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.details.DetailsFragment">

    <com.jgabrielfreitas.core.BlurImageView
        android:id="@+id/image_view_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/unsplash_image"
        android:scaleType="centerCrop"
        tools:scaleType="centerCrop"
        tools:src="@mipmap/ic_launcher" />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/unsplash_image"
        android:scaleType="fitCenter"
        tools:scaleType="fitCenter"
        tools:src="@mipmap/ic_launcher" />

    <View
        android:id="@+id/gradient"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:background="@drawable/gradient"
        android:visibility="gone"
        tools:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:minHeight="50dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_view_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:text="This is description"
                tools:visibility="visible" />

            <TextView
                android:id="@+id/text_view_creator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textColor="@android:color/white"
                android:visibility="gone"
                tools:text="Photo by ABC on Unsplash"
                tools:visibility="visible" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/share_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/share"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_share"
            android:tint="@color/white"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/like_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/like"
            android:padding="5dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_like"
            android:visibility="gone"
            tools:visibility="visible" />

        <ImageButton
            android:id="@+id/wallpaper_button"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@null"
            android:contentDescription="@string/set_wallpaper"
            android:padding="8dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_wallpaper"
            android:tint="@color/white"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <com.vlad1m1r.lemniscate.funny.HeartProgressView
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:duration="1500"
        app:hasHole="true"
        app:lineColor="#DC143C"
        app:maxLineLength="0.9"
        app:minLineLength="0.3"
        app:sizeMultiplier="1"
        app:strokeWidth="3dp" />

</FrameLayout>